core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/ZVC__Zoom_Event__c.object-meta.xml
<CustomObject>
    <label>Zoom Event</label>
    <nameField>
        <displayFormat>Zoom Event-{0000}</displayFormat>
        <label>Zoom Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>