core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Add_Registrant_as_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Add_Registrant_as_Campaign_Member__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Add Registrants as Campaign Members</label>
    <type>Checkbox</type>
</CustomField>