core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Authentication_of_Registrants__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Authentication_of_Registrants__c</fullName>
    <label>Authentication of Registrants</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Zoom users (Fast join without upfront authentication)</fullName>
                <default>true</default>
                <label>Non-Zoom users (Fast join without upfront authentication)</label>
            </value>
            <value>
                <fullName>Zoom account holders (Authenticate via Zoom.us)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>