core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Event_Description__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Event_Description__c</fullName>
    <label>Event Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>