core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Event_ID__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Event_ID__c</fullName>
    <externalId>true</externalId>
    <label>Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>