core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Event_Name__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Event_Name__c</fullName>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>