core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Free_or_Paid__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Free_or_Paid__c</fullName>
    <label>Free or Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>