core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Manual_Sync_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Manual_Sync_Start_Time__c</fullName>
    <label>Manual Sync Start Time</label>
    <type>DateTime</type>
</CustomField>