core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Manual_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Manual_Sync_Status__c</fullName>
    <label>Manual Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>