core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Start_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Start_Date_and_Time__c</fullName>
    <label>Start Date and Time</label>
    <type>DateTime</type>
</CustomField>