core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Sync_Campaign_Member_to_Zoom__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Sync_Campaign_Member_to_Zoom__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync Campaign Members as Registrants</label>
    <type>Checkbox</type>
</CustomField>