core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Sync_Poll_and_QA__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Sync_Poll_and_QA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync Poll and QA</label>
    <type>Checkbox</type>
</CustomField>