core/unpackaged/main/default/objects/ZVC__Zoom_Event__c/fields/ZVC__Ticket_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Ticket_Type_Id__c</fullName>
    <label>Ticket Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>